--- a/pom.xml
+++ b/pom.xml
@@ -140,7 +140,15 @@
             <artifactId>alipay-sdk-java</artifactId>
             <version>4.39.2.ALL</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>1.8.5</version>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
