--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,14 +7,15 @@ spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 mybatis.mapper-locations=classpath:mapper/*.xml
+mybatis.type-aliases-package=com.kgc.easybuy.pojo
 
 # ?? smtp ??
 spring.mail.protocol = smtp
 spring.mail.host = smtp.qq.com
 spring.mail.port = 587
-spring.mail.username = 1527949074@qq.com
+spring.mail.username = 1304057714@qq.com
 # ???
-spring.mail.password = grippicgxvyfhbba
+spring.mail.password = vdiuhrowsiznfggg
 spring.mail.test-connection = false
 spring.mail.properties.mail.smtp.auth = false
 spring.mail.properties.mail.debug = false
