易买网后端项目搭建0.0.3base版

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.mail.host = smtp.qq.com
 spring.mail.port = 587
 spring.mail.username = 1527949074@qq.com
 # ???
-spring.mail.password = grippicgxvyfhbba
+spring.mail.password =lnnccfiilvdlbada
 spring.mail.test-connection = false
 spring.mail.properties.mail.smtp.auth = false
 spring.mail.properties.mail.debug = false
