--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,8 @@ spring.mail.host = smtp.qq.com
 spring.mail.port = 587
 spring.mail.username = 1527949074@qq.com
 # ???
-spring.mail.password =lnnccfiilvdlbada
+
+spring.mail.password =jmmrvkacjcrogchi
 spring.mail.test-connection = false
 spring.mail.properties.mail.smtp.auth = false
 spring.mail.properties.mail.debug = false
