--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/easy_buy
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.jackson.date-format=
+spring.jackson.date-format=GMT+8
 mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.type-aliases-package=com.kgc.easybuy.pojo
 
