--- a/pom.xml
+++ b/pom.xml
@@ -136,6 +136,10 @@
             <version>1.2.5</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.alipay.sdk</groupId>
             <artifactId>alipay-sdk-java</artifactId>
             <version>4.39.2.ALL</version>
@@ -149,6 +153,7 @@
             <artifactId>aspectjweaver</artifactId>
             <version>1.8.5</version>
         </dependency>
+
     </dependencies>
     <dependencyManagement>
         <dependencies>
