--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/easy_buy
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.jackson.date-format=GMT+8
+spring.jackson.time-zone=GMT+8
+spring.jackson.date-format=YYYY-MM-DD HH:mm:ss
 mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.type-aliases-package=com.kgc.easybuy.pojo
 
@@ -14,9 +15,10 @@ mybatis.type-aliases-package=com.kgc.easybuy.pojo
 spring.mail.protocol = smtp
 spring.mail.host = smtp.qq.com
 spring.mail.port = 587
-spring.mail.username = 1304057714@qq.com
+spring.mail.username = 1527949074@qq.com
 # ???
-spring.mail.password = vdiuhrowsiznfggg
+
+spring.mail.password =jmmrvkacjcrogchi
 spring.mail.test-connection = false
 spring.mail.properties.mail.smtp.auth = false
 spring.mail.properties.mail.debug = false
