--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,4 +28,4 @@ spring.mail.default-encoding = UTF-8
 #spring.redis.host=192.168.230.130
 #spring.redis.port=6379
 
-#spring.elasticsearch.rest.uris=http://192.168.230.131:9200
+spring.elasticsearch.rest.uris=http://192.168.230.131:9200
