--- a/pom.xml
+++ b/pom.xml
@@ -158,6 +158,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <optional>true</optional> <!-- 这个需要为 true 热部署才有效 -->
+            <scope>runtime</scope>     <!--只在运行时起作用  打包时不打进去-->
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
