--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,8 +18,8 @@ spring.redis.host=192.168.230.131
 #spring.mail.protocol =smtp
 spring.mail.host =smtp.qq.com
 spring.mail.port =587
-spring.mail.username =1304057714@qq.com
-spring.mail.password =ywmjjettnqdzhaaj
+spring.mail.username =1527949074@qq.com
+spring.mail.password =orwgnpygwfhsghih
 
 spring.mail.test-connection = false
 spring.mail.properties.mail.smtp.auth = false
@@ -37,7 +37,7 @@ alipay.returnUrl=http://localhost:8080/
 alipay.notifyUrl=http://5r59qb.natappfree.cc/alipayNotify
 logging.level.com.kgc.easybuy.dao=debug
 
-logging.level.root=debug
-logging.file.name=debug.log
+#logging.level.root=debug
+#logging.file.name=debug.log
 
 
